--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,10 @@
   text-decoration-line: overline underline;
   text-decoration-style: wavy;
 }
+a:link {
+  color: white;
+  display: block inline;
+}
 
 ol {
   list-style-type: none;
@@ -28,18 +32,26 @@ div {
   font-family: Arial Narrow;
   color: white;
   text-align: left;
-  /*background-color: teal;*/
+}
+.footer {
+  font-family: Arial Narrow;
+  color: white;
+  text-align: left;
+  background-color: black;
+  left:5;
+  bottom:0;
+  width: 98.05%;
+  text-align: center;
+  position: fixed;
+  border-style: ridge;
+  
 }
 
 #myHeader {
   text-align: center;
-  /*background-color: grey;*/
-  animation-name: example;
-  /*animation-duration: 10s;
-  animation-iteration-count: infinite;*/
   color: white;
   font-size: 200%;
-  padding: 8px;
+  padding: 20px;
 }
 #quote {
   text-align: center;
@@ -49,7 +61,8 @@ div {
 body {
   background-image: url("https://cdn.wallpapersafari.com/13/14/XdZGlu.gif");
   font-family: Arial, Helvetica, sans-serif;
-  margin: 0;
+  border-style: ridge; 
+  border-radius: 4px 4px 4px 4px;
 }
 #C3,
 #C3b,
@@ -79,8 +92,10 @@ dt {
 }
 
 .navbar {
-  overflow: hidden;
   background-color: black;
+  position: fixed;
+  border-radius: 4px 4px 4px 4px;
+  width: 98.5%;
 }
 .navbar a {
   float: left;
